Interfata grafica este gata. Am implementat si un model observer (functioneaza pe acelasi fir de executie, dar pe doua in paralel, nu - doar in cazul in care deschid un fir de executie nou, dupa aplicarea modificarilor in primul)